--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -25,9 +25,9 @@
     <artifactId>demo</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.example.utils</groupId>
+            <groupId>org.example</groupId>
             <artifactId>utils</artifactId>
-            <version>1.0.0</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
