--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>utils</artifactId>
+            <artifactId>utils-1.3.5.jar</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
