--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,18 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.example</groupId>
-                <artifactId>demo</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
-                <groupId>org.example</groupId>
-                <artifactId>utils</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
             </plugin>
         </plugins>
     </build>
